tests/snapshots/compiler_error_fixtures/instance_missing_method.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/instance_missing_method.flx
== compile ==
failed (compile)
== diagnostics ==
error[E442]: Missing Instance Method

Missing method `value` in instance `Describable`.

  examples/compiler_errors/instance_missing_method.flx:15:1
   |
15 | instance Describable<Int> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
16 |     fn name(x) { x }
   | ^^^^^^^^^^^^^^^^^^^^
17 | }
   | ^

Hint:
  `Describable` requires: fn value(...)
== stdout ==
<not executed>
